Add selenium/chromedriver related npm packages, with the hopes that WDIO could start chromedriver, but it does not seem to be able to do it simultaneously with appium.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "homepage": "https://github.com/webdriverio/appium-boilerplate#readme",
   "dependencies": {},
   "devDependencies": {
+    "selenium-webdriver": "*",
+    "chromedriver": "x",
+    "wdio-chromedriver-service": "x",
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
